# ship-cli

./: pyproject.toml  ryan_context.md
src/: config.py  git.py  github.py  jira.py  main.py  utils.py
src/ship_cli/: cli.py  config.py  git.py  jira.py  utils.py
