[project]
name = "ship-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]

[project.scripts]
ship = "ship_cli.cli:app"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
